--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,114 @@
+@inproceedings{DBLP:conf/iccvw/SteinbruckerSC11,
+  author    = {Frank Steinbr{\"{u}}cker and
+               J{\"{u}}rgen Sturm and
+               Daniel Cremers},
+  title     = {Real-time visual odometry from dense {RGB-D} images},
+  booktitle = {{IEEE} International Conference on Computer Vision Workshops, {ICCV}
+               2011 Workshops, Barcelona, Spain, November 6-13, 2011},
+  pages     = {719--722},
+  year      = {2011}
+}
+
+@inproceedings{DBLP:conf/cimaging/KubackiBBD12,
+  author    = {Daniel B. Kubacki and
+               Huy Quang Bui and
+               S. Derin Babacan and
+               Minh N. Do},
+  title     = {Registration and integration of multiple depth images using signed
+               distance function},
+  booktitle = {Computational Imaging X, part of the IS{\&}T-SPIE Electronic Imaging
+               Symposium, Burlingame, California, USA, January 23-24, 2012, Proceedings.},
+  pages     = {82960Z},
+  year      = {2012}
+}
+
+@inproceedings{DBLP:conf/eccv/RenR12,
+  author    = {Carl Yuheng Ren and
+               Ian D. Reid},
+  title     = {A Unified Energy Minimization Framework for Model Fitting in Depth},
+  booktitle = {Computer Vision - {ECCV} 2012. Workshops and Demonstrations - Florence,
+               Italy, October 7-13, 2012, Proceedings, Part {II}},
+  pages     = {72--82},
+  year      = {2012}
+}
+
+@inproceedings{DBLP:conf/ismar/NewcombeIHMKDKSHF11,
+  author    = {Richard A. Newcombe and
+               Shahram Izadi and
+               Otmar Hilliges and
+               David Molyneaux and
+               David Kim and
+               Andrew J. Davison and
+               Pushmeet Kohli and
+               Jamie Shotton and
+               Steve Hodges and
+               Andrew W. Fitzgibbon},
+  title     = {KinectFusion: Real-time dense surface mapping and tracking},
+  booktitle = {10th {IEEE} International Symposium on Mixed and Augmented Reality,
+               {ISMAR} 2011, Basel, Switzerland, October 26-29, 2011},
+  pages     = {127--136},
+  year      = {2011}
+}
+
+@INPROCEEDINGS{6631104, 
+	author={C. Kerl and J. Sturm and D. Cremers}, 
+	booktitle={2013 IEEE International Conference on Robotics and Automation}, 
+	title={Robust odometry estimation for RGB-D cameras}, 
+	year={2013}, 
+	volume={}, 
+	number={}, 
+	pages={3748-3754}, 
+	keywords={cameras;filtering theory;image registration;motion estimation;photometry;CPU core;IMU;RGB-D cameras;RGB-D frames;RGB-D images;camera motion estimation;coarse-to-fine scheme;computational resources;constant memory footprint;image data;motion model;nonlinear minimization;open source license;photometric error;robust error function;robust odometry estimation;sensors;temporal filtering;Convergence;Jacobian matrices;Licenses;Octrees;Robustness;Sensors;Software}, 
+	doi={10.1109/ICRA.2013.6631104}, 
+	ISSN={1050-4729}, 
+	month={May}
+}
+
+@inproceedings{DBLP:conf/iros/KerlSC13,
+  author    = {Christian Kerl and
+               J{\"{u}}rgen Sturm and
+               Daniel Cremers},
+  title     = {Dense visual {SLAM} for {RGB-D} cameras},
+  booktitle = {2013 {IEEE/RSJ} International Conference on Intelligent Robots and
+               Systems, Tokyo, Japan, November 3-7, 2013},
+  pages     = {2100--2106},
+  year      = {2013},
+}
+
+@inproceedings{DBLP:conf/eccv/KahlerPM16,
+  author    = {Olaf K{\"{a}}hler and
+               Victor Adrian Prisacariu and
+               David W. Murray},
+  title     = {Real-Time Large-Scale Dense 3D Reconstruction with Loop Closure},
+  booktitle = {Computer Vision - {ECCV} 2016 - 14th European Conference, Amsterdam,
+               The Netherlands, October 11-14, 2016, Proceedings, Part {VIII}},
+  pages     = {500--516},
+  year      = {2016}
+}
+
+@article{DBLP:journals/ijcv/UrbanWLH17,
+  author    = {Steffen Urban and
+               Sven Wursthorn and
+               Jens Leitloff and
+               Stefan Hinz},
+  title     = {MultiCol Bundle Adjustment: {A} Generic Method for Pose Estimation,
+               Simultaneous Self-Calibration and Reconstruction for Arbitrary Multi-Camera
+               Systems},
+  journal   = {International Journal of Computer Vision},
+  volume    = {121},
+  number    = {2},
+  pages     = {234--252},
+  year      = {2017}
+}
+
+@inproceedings{Kerl2013Large,
+  title={Large-Scale Multi-resolution Surface Reconstruction from RGB-D Sequences},
+  author={Kerl, Christian and Cremers, Daniel},
+  booktitle={IEEE International Conference on Computer Vision},
+  pages={3264-3271},
+  year={2013}
+}
+
 @inproceedings{DBLP:conf/siggraph/CurlessL96,
   author    = {Brian Curless and
                Marc Levoy},
@@ -54,7 +165,7 @@
   volume={10},
   number={3},
   pages={145-155},
-  year={1992},
+  year={1992}
 }
 
 @article{DBLP:journals/pami/BeslM92,
@@ -72,7 +183,6 @@
   biburl    = {https://dblp.org/rec/bib/journals/pami/BeslM92},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
 
 @inproceedings{DBLP:conf/rss/KlingensmithDSX15,
   author    = {Matthew Klingensmith and
