--- a/reference.bib
+++ b/reference.bib
@@ -86,6 +86,20 @@
   year      = {2016}
 }
 
+@inproceedings{DBLP:conf/icra/EndresHESCB12,
+  author    = {Felix Endres and
+               J{\"{u}}rgen Hess and
+               Nikolas Engelhard and
+               J{\"{u}}rgen Sturm and
+               Daniel Cremers and
+               Wolfram Burgard},
+  title     = {An evaluation of the {RGB-D} {SLAM} system},
+  booktitle = {{IEEE} International Conference on Robotics and Automation, {ICRA}
+               2012, 14-18 May, 2012, St. Paul, Minnesota, {USA}},
+  pages     = {1691--1696},
+  year      = {2012}
+}
+
 @article{DBLP:journals/ijcv/UrbanWLH17,
   author    = {Steffen Urban and
                Sven Wursthorn and
@@ -133,12 +147,284 @@
   year      = {2013}
 }
 
+@article{DBLP:journals/corr/abs-1708-00783,
+  author    = {Victor Adrian Prisacariu and
+               Olaf K{\"{a}}hler and
+               Stuart Golodetz and
+               Michael Sapienza and
+               Tommaso Cavallari and
+               Philip H. S. Torr and
+               David W. Murray},
+  title     = {InfiniTAM v3: {A} Framework for Large-Scale 3D Reconstruction with
+               Loop Closure},
+  journal   = {CoRR},
+  volume    = {abs/1708.00783},
+  year      = {2017}
+}
+
+@inproceedings{DBLP:conf/cvpr/FioraioTFSI15,
+  author    = {Nicola Fioraio and
+               Jonathan Taylor and
+               Andrew W. Fitzgibbon and
+               Luigi di Stefano and
+               Shahram Izadi},
+  title     = {Large-scale and drift-free surface reconstruction using online subvolume
+               registration},
+  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition, {CVPR}
+               2015, Boston, MA, USA, June 7-12, 2015},
+  pages     = {4475--4483},
+  year      = {2015}
+}
+
+@inproceedings{DBLP:conf/icra/ForsterPS14,
+  author    = {Christian Forster and
+               Matia Pizzoli and
+               Davide Scaramuzza},
+  title     = {{SVO:} Fast semi-direct monocular visual odometry},
+  booktitle = {2014 {IEEE} International Conference on Robotics and Automation, {ICRA}
+               2014, Hong Kong, China, May 31 - June 7, 2014},
+  pages     = {15--22},
+  year      = {2014}
+}
+
+@article{DBLP:journals/tog/NiessnerZIS13,
+  author    = {Matthias Nie{\ss}ner and
+               Michael Zollh{\"{o}}fer and
+               Shahram Izadi and
+               Marc Stamminger},
+  title     = {Real-time 3D reconstruction at scale using voxel hashing},
+  journal   = {{ACM} Trans. Graph.},
+  volume    = {32},
+  number    = {6},
+  pages     = {169:1--169:11},
+  year      = {2013}
+}
+
+@article{DBLP:journals/mta/VerykokouIADA18,
+  author    = {Styliani Verykokou and
+               Charalabos Ioannidis and
+               George Athanasiou and
+               Nikolaos Doulamis and
+               Angelos Amditis},
+  title     = {3D reconstruction of disaster scenes for urban search and rescue},
+  journal   = {Multimedia Tools Appl.},
+  volume    = {77},
+  number    = {8},
+  pages     = {9691--9717},
+  year      = {2018}
+}
+
+@article{DBLP:journals/access/BanerjeeYA18,
+  author    = {Debdeep Banerjee and
+               Kevin Yu and
+               Garima Aggarwal},
+  title     = {Robotic Arm Based 3D Reconstruction Test Automation},
+  journal   = {{IEEE} Access},
+  volume    = {6},
+  pages     = {7206--7213},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/aaai/LinKL18,
+  author    = {Chen{-}Hsuan Lin and
+               Chen Kong and
+               Simon Lucey},
+  title     = {Learning Efficient Point Cloud Generation for Dense 3D Object Reconstruction},
+  booktitle = {Proceedings of the Thirty-Second {AAAI} Conference on Artificial Intelligence,
+               New Orleans, Louisiana, USA, February 2-7, 2018},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/icra/FehrFDSGSC17,
+  author    = {Marius Fehr and
+               Fadri Furrer and
+               Ivan Dryanovski and
+               J{\"{u}}rgen Sturm and
+               Igor Gilitschenski and
+               Roland Siegwart and
+               Cesar Cadena},
+  title     = {TSDF-based change detection for consistent long-term dense reconstruction
+               and dynamic object discovery},
+  booktitle = {2017 {IEEE} International Conference on Robotics and Automation, {ICRA}
+               2017, Singapore, Singapore, May 29 - June 3, 2017},
+  pages     = {5237--5244},
+  year      = {2017}
+}
+
+@inproceedings{DBLP:conf/iros/AmbrusBFJ14,
+  author    = {Rares Ambrus and
+               Nils Bore and
+               John Folkesson and
+               Patric Jensfelt},
+  title     = {Meta-rooms: Building and maintaining long term spatial models in a
+               dynamic world},
+  booktitle = {2014 {IEEE/RSJ} International Conference on Intelligent Robots and
+               Systems, Chicago, IL, USA, September 14-18, 2014},
+  pages     = {1854--1861},
+  year      = {2014}
+}
+
+@article{DBLP:journals/jfr/LinGQGLWYS18,
+  author    = {Yi Lin and
+               Fei Gao and
+               Tong Qin and
+               Wenliang Gao and
+               Tianbo Liu and
+               William Wu and
+               Zhenfei Yang and
+               Shaojie Shen},
+  title     = {Autonomous aerial navigation using monocular visual-inertial fusion},
+  journal   = {J. Field Robotics},
+  volume    = {35},
+  number    = {1},
+  pages     = {23--51},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/iros/WagnerFB14,
+  author    = {Ren{\'{e}} Wagner and
+               Udo Frese and
+               Berthold B{\"{a}}uml},
+  title     = {Graph {SLAM} with signed distance function maps on a humanoid robot},
+  booktitle = {2014 {IEEE/RSJ} International Conference on Intelligent Robots and
+               Systems, Chicago, IL, USA, September 14-18, 2014},
+  pages     = {2691--2698},
+  year      = {2014}
+}
+
+@article{DBLP:journals/ral/FaulhammerABZFH17,
+  author    = {Thomas Faulhammer and
+               Rares Ambrus and
+               Chris Burbridge and
+               Michael Zillich and
+               John Folkesson and
+               Nick Hawes and
+               Patric Jensfelt and
+               Markus Vincze},
+  title     = {Autonomous Learning of Object Models on a Mobile Robot},
+  journal   = {{IEEE} Robotics and Automation Letters},
+  volume    = {2},
+  number    = {1},
+  pages     = {26--33},
+  year      = {2017}
+}
+
+@inproceedings{DBLP:conf/scia/KyostilaCKH13,
+  author    = {Tomi Ky{\"{o}}stil{\"{a}} and
+               Daniel Herrera C. and
+               Juho Kannala and
+               Janne Heikkil{\"{a}}},
+  title     = {Merging Overlapping Depth Maps into a Nonredundant Point Cloud},
+  booktitle = {Image Analysis, 18th Scandinavian Conference, {SCIA} 2013, Espoo,
+               Finland, June 17-20, 2013. Proceedings},
+  pages     = {567--578},
+  year      = {2013}
+}
+
+@article{DBLP:journals/corr/abs-1804-08912,
+  author    = {Markus Ylim{\"{a}}ki and
+               Juho Kannala and
+               Janne Heikkil{\"{a}}},
+  title     = {Accurate 3-D Reconstruction with {RGB-D} Cameras using Depth Map Fusion
+               and Pose Refinement},
+  journal   = {CoRR},
+  volume    = {abs/1804.08912},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/icra/SenguptaS15,
+  author    = {Sunando Sengupta and
+               Paul Sturgess},
+  title     = {Semantic octree: Unifying recognition, reconstruction and representation
+               via an octree constrained higher order {MRF}},
+  booktitle = {{IEEE} International Conference on Robotics and Automation, {ICRA}
+               2015, Seattle, WA, USA, 26-30 May, 2015},
+  pages     = {1874--1879},
+  year      = {2015}
+}
+
+@article{DBLP:journals/cgf/JiaZYP18,
+  author    = {Shiyu Jia and
+               Weizhong Zhang and
+               Xiaokang Yu and
+               Zhenkuan Pan},
+  title     = {{CPU-GPU} Parallel Framework for Real-Time Interactive Cutting of
+               Adaptive Octree-Based Deformable Objects},
+  journal   = {Comput. Graph. Forum},
+  volume    = {37},
+  number    = {1},
+  pages     = {45--59},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/scia/YlimakiKH17,
+  author    = {Markus Ylim{\"{a}}ki and
+               Juho Kannala and
+               Janne Heikkil{\"{a}}},
+  title     = {Robust and Practical Depth Map Fusion for Time-of-Flight Cameras},
+  booktitle = {Image Analysis - 20th Scandinavian Conference, {SCIA} 2017, Troms{\o},
+               Norway, June 12-14, 2017, Proceedings, Part {I}},
+  pages     = {122--134},
+  year      = {2017}
+}
+
+@article{DBLP:journals/corr/abs-1710-07242,
+  author    = {Alexander Millane and
+               Zachary Taylor and
+               Helen Oleynikova and
+               Juan I. Nieto and
+               Roland Siegwart and
+               Cesar Cadena},
+  title     = {{TSDF} Manifolds: {A} Scalable and Consistent Dense Mapping Approach},
+  journal   = {CoRR},
+  volume    = {abs/1710.07242},
+  year      = {2017}
+}
+
+@inproceedings{DBLP:conf/siggraph/PfisterZBG00,
+  author    = {Hanspeter Pfister and
+               Matthias Zwicker and
+               Jeroen van Baar and
+               Markus H. Gross},
+  title     = {Surfels: surface elements as rendering primitives},
+  booktitle = {Proceedings of the 27th Annual Conference on Computer Graphics and
+               Interactive Techniques, {SIGGRAPH} 2000, New Orleans, LA, USA, July
+               23-28, 2000},
+  pages     = {335--342},
+  year      = {2000}
+}
+
+@inproceedings{DBLP:conf/rss/WhelanLSGD15,
+  author    = {Thomas Whelan and
+               Stefan Leutenegger and
+               Renato F. Salas{-}Moreno and
+               Ben Glocker and
+               Andrew J. Davison},
+  title     = {ElasticFusion: Dense {SLAM} Without {A} Pose Graph},
+  booktitle = {Robotics: Science and Systems XI, Sapienza University of Rome, Rome,
+               Italy, July 13-17, 2015},
+  year      = {2015}
+}
+
 @inproceedings{Whelan2013Deformation,
   title={Deformation-based loop closure for large scale dense RGB-D SLAM},
   author={Whelan, T and Kaess, M and Leonard, J. J and Mcdonald, J},
   booktitle={Ieee/rsj International Conference on Intelligent Robots and Systems},
   pages={548-555},
   year={2013},
+}
+
+@inproceedings{DBLP:conf/icra/KummerleGSKB11,
+  author    = {Rainer K{\"{u}}mmerle and
+               Giorgio Grisetti and
+               Hauke Strasdat and
+               Kurt Konolige and
+               Wolfram Burgard},
+  title     = {G\({}^{\mbox{2}}\)o: {A} general framework for graph optimization},
+  booktitle = {{IEEE} International Conference on Robotics and Automation, {ICRA}
+               2011, Shanghai, China, 9-13 May 2011},
+  pages     = {3607--3613},
+  year      = {2011}
 }
 
 @inproceedings{Wurm2010OctoMap,
