--- a/reference.bib
+++ b/reference.bib
@@ -292,6 +292,88 @@
   year      = {2014}
 }
 
+@article{DBLP:journals/vc/GuoXW18,
+  author    = {Xiaoyuan Guo and
+               Jun Xiao and
+               Ying Wang},
+  title     = {A survey on algorithms of hole filling in 3D surface reconstruction},
+  journal   = {The Visual Computer},
+  volume    = {34},
+  number    = {1},
+  pages     = {93--103},
+  year      = {2018}
+}
+
+@inproceedings{DBLP:conf/lssc/RudolfWRRMS15,
+  author    = {Florian Rudolf and
+               Josef Weinbub and
+               Karl Rupp and
+               Peter Resutik and
+               Andreas Morhammer and
+               Siegfried Selberherr},
+  title     = {Free Open Source Mesh Healing for {TCAD} Device Simulations},
+  booktitle = {Large-Scale Scientific Computing - 10th International Conference,
+               {LSSC} 2015, Sozopol, Bulgaria, June 8-12, 2015. Revised Selected
+               Papers},
+  pages     = {293--300},
+  year      = {2015}
+}
+
+@article{DBLP:journals/jwscg/BendelsSK06,
+  author    = {Gerhard H. Bendels and
+               Ruwen Schnabel and
+               Reinhard Klein},
+  title     = {Detecting Holes in Point Set Surfaces},
+  journal   = {Journal of {WSCG}},
+  volume    = {14},
+  number    = {1-3},
+  pages     = {89--96},
+  year      = {2006}
+}
+
+@article{DBLP:journals/dm/WagnerW09,
+  author    = {David G. Wagner and
+               Yehua Wei},
+  title     = {A criterion for the half-plane property},
+  journal   = {Discrete Mathematics},
+  volume    = {309},
+  number    = {6},
+  pages     = {1385--1390},
+  year      = {2009}
+}
+
+@inproceedings{DBLP:conf/mm/ZhangW12,
+  author    = {Chi Zhang and
+               Weiqiang Wang},
+  title     = {A robust and efficient shot boundary detection approach based on fisher
+               criterion},
+  booktitle = {Proceedings of the 20th {ACM} Multimedia Conference, {MM} '12, Nara,
+               Japan, October 29 - November 02, 2012},
+  pages     = {701--704},
+  year      = {2012}
+}
+
+@inproceedings{DBLP:conf/smi/WeberHH10,
+  author    = {Christopher Weber and
+               Stefanie Hahmann and
+               Hans Hagen},
+  title     = {Sharp Feature Detection in Point Clouds},
+  booktitle = {{SMI} 2010, Shape Modeling International Conference, Aix en Provence,
+               France, June 21-23 2010},
+  pages     = {175--186},
+  year      = {2010}
+}
+
+@article{Tran2015Extraction,
+  title={Extraction of Reliable Primitives from Unorganized Point Clouds},
+  author={Tran, Trung Thien and Cao, Van Toan and Laurendeau, Denis},
+  journal={3d Research},
+  volume={6},
+  number={4},
+  pages={44},
+  year={2015},
+}
+
 @article{DBLP:journals/ral/FaulhammerABZFH17,
   author    = {Thomas Faulhammer and
                Rares Ambrus and
